--- a/src/templates/events/comments.html
+++ b/src/templates/events/comments.html
@@ -1,7 +1,8 @@
 <div class="eventFormComments centered" data-form-id="{{CardID}}">
-    <h2>Comments/Questions</h2>
-    <p>If you have any additional comments or questions, please put them here</p>
-    <div class="detailsTable">
-        <textarea name="comments" rows="7" style="width:100%"></textarea>
+    <h1>Comments/Questions</h1>
+    <div class="eventDescription">
+        <div class="detailsTable">
+            <textarea name="comments" rows="5" style="width:100%" placeholder="Enter any comments or questions here ..."></textarea>
+        </div>
     </div>
 </div>
