--- a/src/templates/events/form.html
+++ b/src/templates/events/form.html
@@ -1,9 +1,9 @@
-<div class="eventForm centered" data-form-id="{{CardID}}">
+<div class="eventForm centered dtk-fade" data-form-id="{{CardID}}">
     <div>
-        <h2>{{Name}}</h2>
+        <h1>{{Name}}</h1>
         <p class="eventDescription">{{Description}}</p>
         <div class="eventDetailsTable">
-            <h3>Details</h3>
+            <h2>Details</h2>
             <table style="width:100%">
                 <colgroup>
                     <col style="width:49%;"/>
@@ -15,7 +15,7 @@
             </table>
         </div>
         <div class="detailsTable">
-            <h3>Your Response</h3>
+            <h2>Your Response</h2>
             <div class="centered responseButtonGroup">
                 {{Checklists.ResponseOptions.ItemsHtml}}
             </div>
