--- a/src/templates/events/formSubmit.html
+++ b/src/templates/events/formSubmit.html
@@ -1,3 +1,3 @@
 <div class="centered" style="padding:1%; text-align:center;">
-    <button style="font-size:44px;" onclick="onSubmitResponses()">Submit</button>
+    <button id="formsSubmitButton" onclick="onSubmitResponses()">Submit</button>
 </div>
