--- a/src/templates/events/form.html
+++ b/src/templates/events/form.html
@@ -13,7 +13,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="detailsTable">
+        <div class="eventDetailsTable">
             <div class="centered responseButtonGroup">
                 {{Checklists.ResponseOptions.ItemsHtml}}
             </div>
