--- a/src/css/events.css
+++ b/src/css/events.css
@@ -20,7 +20,7 @@
 .eventForm .responseOptions { width:70%; margin:auto; }
 .eventForm label:hover { cursor:pointer; } 
 
-#formsSubmitButton { font-size: 22px;border-radius: 30px; background-color: blue; padding: 0.5%; border: none; color: white; font-weight: bolder; cursor: pointer; }
+#formsSubmitButton { font-size: 22px;border-radius: 30px; background-color: blue; padding: 2%; border: none; color: white; font-weight: bolder; cursor: pointer; }
 
 /* Response Buttons */
 .eventForm .responseButton { margin-bottom:2%; border:1px solid black; border-radius:20px; padding:1%; line-height: 25px; vertical-align: middle; background-color: lightgray; color:black; cursor:pointer; transition: transform 0.1s linear; }
@@ -40,5 +40,7 @@
 	.eventDescription { width:35%; }
 	#eventOverviewSection { width:50%; padding: 2% 3%; }
 	.eventDetailsTable { width:80%; margin-top:2%; }
+	#formsSubmitButton { padding: 0.5%;  }
+
 
 }
