Send comment from comment box too

--- a/src/templates/events/comments.html
+++ b/src/templates/events/comments.html
@@ -1,8 +1,6 @@
-<div class="eventFormComments centered" data-form-id="{{CardID}}">
+<div class="eventForm eventFormComments centered" data-form-id="{{CardID}}">
     <h1>Comments/Questions</h1>
     <div class="eventDescription">
-        <div class="detailsTable">
-            <textarea name="comments" rows="5" style="width:100%" placeholder="Enter any comments or questions here ..."></textarea>
-        </div>
+        <textarea class="commentBox" name="comments" rows="5" style="width:100%" placeholder="Enter any comments or questions here ..."></textarea>
     </div>
 </div>
