--- a/src/templates/events/noContent.html
+++ b/src/templates/events/noContent.html
@@ -1,6 +1,6 @@
 <div class="centered" style="margin-top:5%;">
-    <h2><i class="fa-regular fa-face-frown"></i> Can't Load Event Details</h2>
-    <div class="IsLogin-IsLoggedIn">
-        Try <a href="/auth/?action=1" target="_top">logging in</a> to make sure you can view 
+    <h2>{{Title}}</h2>
+    <div class="IsLoggedIn-{{IsLoggedIn}}">
+        <p>Please <a href="/auth/?action=1" target="_top">login</a> to view the content.</p> 
     </div>
 </div>
