--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,6 +1,6 @@
 /********* Headers/Titles/Icons ***********************/
 /* General */
-body.theme_black_bg { background-color:black; color:white; }
+body.theme_black_bg { background-color:black; color:#f8f8ff; }
 .pageMessage { font-size: 16px; }
 
 .iconSize { font-size: 25px; }
@@ -10,6 +10,8 @@ body.theme_black_bg { background-color:black; color:white; }
 .dtk-fade-in { opacity:100; transition: opacity ease-in 0.5s; }
 .dtk-fade-out { opacity:0 !important; transition: opacity ease-out 0.2s; }
 
+.loadingGif { width: 25%; height:25%; }
+
 /* Menu */
 /* .menuSection { } */
 #userIconSection { position: fixed; top:2%; right:2%; z-index:100; }
@@ -17,14 +19,14 @@ body.theme_black_bg { background-color:black; color:white; }
 .userName.mobile { display:inline-block; }
 
 /* Side navigation */
-.sideNav { position:absolute; height:100%; background-color: black; color:white; width:0px; overflow-x:hidden; z-index:101;   }
+.sideNav { position:absolute; height:100%; background-color: black; color:#f8f8ff; width:0px; overflow-x:hidden; z-index:101;   }
 .sideNav.open {width: 100%; transition: ease 0.5s; }
 .sideNav.left { left:0; }
 .sideNav.right { right:0; }
 .sideNav .closeIcon { color: lightgray; display:inline-block; width:100%; text-align:center; margin-bottom:3%; font-size:25px; cursor:pointer; }
 
 .sideNav .navRow { display:inline-block; padding:1%; text-align:center; opacity:0; font-size:0px; width:100%; margin-bottom:2%; }
-.sideNav .navItem { border-top:2px solid white; border-bottom:2px solid white; background-color:white;  }
+.sideNav .navItem { border-top:2px solid #f8f8ff; border-bottom:2px solid #f8f8ff; background-color:#f8f8ff;  }
 .sideNav.open .navRow { opacity: 100; font-size:initial; transition: ease 0.9s; }
 
 
@@ -33,7 +35,7 @@ body.theme_black_bg { background-color:black; color:white; }
 .menuLogin:hover { cursor:pointer; }
 .menuLogin .authLink { cursor:pointer; font-size: 16px; }
 .menuLogin .authLink .login { color:orange !important; }
-.menuLogin .authLink .logout { color:white !important; }
+.menuLogin .authLink .logout { color:#f8f8ff !important; }
 #menuDropdown { display:none;}
 #menuLoginSection.open { background-color: black; display:block !important;}
 #menuLoginSection.open #menuDropdown { display:block !important;}
@@ -41,7 +43,7 @@ body.theme_black_bg { background-color:black; color:white; }
 .searchIcons { float:right; margin-left:2%; vertical-align: middle;}
 #randomAdventureIcon { color:orange; }
 #searchClearIcon { color: red !important; }
-#searchBarSection { text-align:left; border-radius:77px; border:1px solid gray; background-color:white; padding:2%; width:70%; }
+#searchBarSection { text-align:left; border-radius:77px; border:1px solid gray; background-color:#f8f8ff; padding:2%; width:70%; }
 .searchBarSection { display:inline-block; }
 #searchBarInput { width:80%; border: none; }
 #searchBarInput:focus{ outline: none; outline-offset: 0;}
@@ -49,7 +51,7 @@ body.theme_black_bg { background-color:black; color:white; }
 
 /*** Adventures List */
 #adventuresPanel { display:flex; flex-wrap: wrap; flex-direction: row; justify-content: center; gap:10px; align-items:center; align-content:center;  }
-.adventureBlock { height:200px; min-width:89%; max-width:90%; cursor:pointer; overflow:hidden; position:relative; border-radius: 25px; transition: width 0.5s ease, height 0.5s ease, transform 0.5s ease; }
+.adventureBlock { height:200px; min-width:90%; max-width:90%; cursor:pointer; overflow:hidden; position:relative; border-radius: 25px; transition: width 0.5s ease, height 0.5s ease, transform 0.5s ease; }
 .adventureBlock .nameSection { text-align:center; margin:0%; position: absolute; width: 100%;  z-index: 50; background-color: #f8f8ff;  padding: 1%; bottom: 0; }
 .adventureBlock:hover { transform: scale(1.02);}
 .adventureBlock .loadingGif { display:block; margin:auto; text-align:center; width:20%;height:20%; }
@@ -75,6 +77,8 @@ body.theme_black_bg { background-color:black; color:white; }
 @media only screen and (min-width: 768px) {
 	.adventureBlock{ min-width:10%;}
 	#searchBarSection { padding:0.5%; }
+	.loadingGif { width: 5%; height:5%; }
+
 }
 
 /* Large devices (laptops/desktops ) */
