--- a/src/css/adventure.css
+++ b/src/css/adventure.css
@@ -14,7 +14,7 @@
 
 /*** Description */
 #descriptionSection { clear:both; width:90%; margin:auto; }
-#adventureDescription { clear:both; }
+#adventureDescription { clear:both; text-align:left; width:100%; padding-top:2%; }
 
 /*** Content List */
 #contentListSection { display:flex; flex-wrap: wrap; flex-direction: row; justify-content: center; gap:10px; align-items:center; align-content:center;  }
