--- a/src/css/events.css
+++ b/src/css/events.css
@@ -1,16 +1,19 @@
 
-/*** Menu Section */
-#moreDetailsIcon { padding-left:0.5% }
-.showDescriptionIcon { color: limegreen; vertical-align: middle; }
+/* The main sections */
+#eventOverviewSection { width:99%; margin:auto; font-size:110%;  font-family: Helvetica, sans-serif; }
+#eventContentSection { width:95%; margin:auto; position:relative; font-family: "Comic Sans MS"; }
 
-.IsLoggedIn-true { display:none; }
-
-/* Event Details */
-#eventOverviewSection { width:90%; margin:auto; border-bottom:solid gray; border-width:thick; font-size:110%; }
-.eventForm { margin-top:5%; margin-bottom:5%; }
-.eventDescription { width:80%; margin:auto;  }
+/* The event forms */
+.eventForm { margin-top:2%; margin-bottom:5%; border-top:solid gray; border-width:thick; width:100%; margin:auto; position:absolute; }
+.eventFormFade { opacity: 0; transition: opacity ease 0.2s; }
+.eventFormFade.active { opacity: 100 !important; z-index:100;  }
 .eventDetailsTable { width:100%; margin:auto; margin-top:5%; }
-.eventForm .formDescription { width:80%; margin:auto; }
+
+/* Hiding parts in the form */
+.ShowChecklists-false { display:none; }
+.ShowComments-false { display:none; }
+
+/* The parts in a form */
 .eventForm .detailsTable { width:50%; margin:auto; margin-top:2%; }
 .eventForm .infoCell { padding:0.5%;  }
 .eventForm .leftCell { text-align:right; font-weight:bold;  }
@@ -18,8 +21,7 @@
 .eventForm .responseOptions { width:70%; margin:auto; }
 .eventForm .responseOptions { width:70%; margin:auto; }
 .eventForm label:hover { cursor:pointer; } 
-
-#formsSubmitButton { font-size: 22px;border-radius: 30px; background-color: blue; padding: 2%; border: none; color: white; font-weight: bolder; cursor: pointer; }
+.eventForm .commentBox { width: 80%; }
 
 /* Response Buttons */
 .eventForm .responseButton { margin-bottom:2%; border:1px solid black; border-radius:20px; padding:1%; line-height: 25px; vertical-align: middle; background-color: lightgray; color:black; cursor:pointer; transition: transform 0.1s linear; }
@@ -31,15 +33,20 @@
 .eventForm .responseButton.responseMaybe:hover { background-color:orange; }
 .eventForm .responseButton.responseMaybe.selected { background-color:orange; color:white; }
 
-
-/*** MEDIA SECTIONS ***/
+/* Submit buttons */
+.eventForm .formButtons { margin-top:5%; }
+.eventFormButton { position:absolute; font-size: 18px;border-radius: 30px; background-color: blue; padding: 2%; border: none; color: white; font-weight: bolder; cursor: pointer;  }
+.eventFormButton.left { left:0; }
+.eventFormButton.submit { display:none; }
+.eventFormButton.right { right:0; }
+.eventForm:nth-child(1) .eventFormButton.left { display:none; }
+.eventForm:nth-child(1) .eventFormButton.submit { display:none; }
+.eventForm:last-child .eventFormButton.right { display:none; }
+.eventForm:last-child .eventFormButton.submit { display:block !important; margin:auto; position:static; }
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
-	.eventDescription { width:35%; }
-	#eventOverviewSection { width:50%; padding: 2% 3%; }
+	#eventOverviewSection { width:50%; padding: 0.5% 3%; }
+	#eventContentSection { width:30%; }
 	.eventDetailsTable { width:80%; margin-top:2%; }
-	#formsSubmitButton { padding: 0.5%;  }
-
-
 }
