--- a/src/css/events.css
+++ b/src/css/events.css
@@ -1,7 +1,8 @@
 
 /* The main sections */
-#eventOverviewSection { width:99%; margin:auto; font-size:110%;  font-family: Helvetica, sans-serif; }
-#eventContentSection { width:95%; margin:auto; position:relative; font-family: "Comic Sans MS"; }
+#eventName { font-family: Palatino, Helvetica, sans-serif; }
+#eventOverviewSection { width:99%; margin:auto; font-size:110%;  font-family: Palatino, Helvetica, sans-serif;}
+#eventContentSection { width:95%; margin:auto; position:relative; font-family: Palatino, Helvetica, sans-serif; }
 
 /* The event forms */
 .eventForm { margin-top:2%; margin-bottom:5%; border-top:solid gray; border-width:thick; width:100%; margin:auto; position:absolute; }
