--- a/src/templates/main/adventureBlock.html
+++ b/src/templates/main/adventureBlock.html
@@ -1,5 +1,5 @@
 <div data-adventure-id="{{AdventureID}}" class="adventureBlock">
-	<img class="loadingGif" src="https://dejai.github.io/scripts/assets/img/loading1.gif" style="width:100%;height:100%;" >
+	<img class="loadingGif" style="width:35px;height:35px;" src="https://dejai.github.io/scripts/assets/img/loading1.gif" alt="Loading ...">
     <div class="adventureBlockImageSection showOnImageLoad">
         <img src="{{CoverContent.Urls.thumbnail}}" alt="img" onclick="onNavigateToAdventure(event)" onload="onPictureLoaded(this)"/>
     </div>
