--- a/src/templates/events/noContent.html
+++ b/src/templates/events/noContent.html
@@ -1,6 +1,6 @@
 <div class="centered" style="margin-top:5%;">
     <h2>{{Title}}</h2>
     <div class="IsLoggedIn-{{IsLoggedIn}}">
-        <p>Please <a href="/auth/?action=1" target="_top">login</a> to view the content.</p> 
+        <p>Please <a class="loginAction" href="/auth/?action=1" target="_top">login</a> to view the content.</p> 
     </div>
 </div>
