--- a/src/templates/events/submitted.html
+++ b/src/templates/events/submitted.html
@@ -1,4 +1,4 @@
 <div class="centered">
     <h1>Response Submitted!</h1>
-    <p>Thanks for submitting your response! &nbsp; <i class="fa-regular fa-face-smile"></i></p>
+    <p>Thanks you! &nbsp; <i class="fa-regular fa-face-smile"></i></p>
 </div>
