--- a/src/css/main.css
+++ b/src/css/main.css
@@ -25,7 +25,7 @@ body.theme_black_bg { background-color:black; color:#f8f8ff; }
 .dtk-fade-out { opacity:0 !important; transition: opacity ease-out 0.2s; }
 
 /* Heading */
-.mainHeading { margin:0px; margin-top:0.3%; width:80%; text-align:left; }
+.mainHeading { margin:0px; margin-top:2%; width:80%; text-align:left; }
 
 /* Menu */
 #userIconSection { position: fixed; top:2%; right:2%; z-index:100; }
@@ -106,7 +106,7 @@ body.theme_black_bg { background-color:black; color:#f8f8ff; }
 @media only screen and (min-width: 768px) {
 	#searchBarSection { top:5%; }
 	.menuIcons { top: 15%; }
-	.mainHeading { text-align: center; width:100%; }
+	.mainHeading { margin-top:0.3%; text-align: center; width:100%; }
 
 	#adventuresPanel.navOpen { display:flex !important; }
 	#mainTitle.fadeOnSearch { opacity:100 !important; }
