--- a/src/templates/main/adventureBlock.html
+++ b/src/templates/main/adventureBlock.html
@@ -1,5 +1,5 @@
 <div data-adventure-id="{{AdventureID}}" class="adventureBlock">
-	<img class="loadingGif" style="width:35px;height:35px;" src="https://dejai.github.io/scripts/assets/img/loading1.gif" alt="Loading ...">
+    <span class="loadingGif" style="font-size:35px;"><i class="fa-solid fa-spinner dtk-spinning fast"></i></span>
     <div class="adventureBlockImageSection showOnImageLoad">
         <img src="{{CoverContent.Urls.thumbnail}}" alt="img" onclick="onNavigateToAdventure(event)" onload="onPictureLoaded(this)"/>
     </div>
