--- a/src/css/events.css
+++ b/src/css/events.css
@@ -7,7 +7,7 @@
 /* The event forms */
 .eventForm { margin-top:2%; margin-bottom:5%; border-top:solid #D4D1CD; border-width:thick; width:100%; margin:auto; position:absolute; }
 .eventFormFade { opacity: 0; transition: opacity ease 0.2s; }
-.eventFormFade.active { opacity: 100 !important; z-index:100;  }
+.eventFormFade.active { opacity: 100 !important; z-index:50;  }
 
 /* The parts in a form */
 .eventForm .eventDetailsTable { width:100%; margin:auto; margin-top:5%; }
@@ -45,7 +45,7 @@
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
-	#eventOverviewSection { width:30%; padding: 0.5% 3%; }
+	#eventOverviewSection { width:30%; }
 	#eventContentSection { width:30%; }
 	.eventDetailsTable { width:80%; margin-top:2%; }
 	.eventForm .responseButton:hover { transform: scale(1.02); }
