--- a/src/templates/events/form.html
+++ b/src/templates/events/form.html
@@ -27,6 +27,7 @@
 
     <div class="formButtons">
         <button class="eventFormButton left" onclick="onNavigateForms(this, 'prev')">BACK</button>
+        <span class="eventFormIndex">{{FormIndex}}</span>
         <button class="eventFormButton submit" onclick="onSubmitResponses()">SUBMIT</button>
         <button class="eventFormButton right" onclick="onNavigateForms(this, 'next')">NEXT</button>
     </div>
