--- a/src/templates/main/adventureBlock.html
+++ b/src/templates/main/adventureBlock.html
@@ -1,5 +1,5 @@
 <div data-adventure-id="{{AdventureID}}" class="adventureBlock">
-    <span class="loadingGif" style="font-size:35px;"><i class="fa-solid fa-spinner dtk-spinning fast"></i></span>
+    <span class="loadingGif" style="font-size:35px;"><i class="fa-solid fa-spinner dtk-spinning dtk-spinning-1000"></i></span>
     <div class="adventureBlockImageSection showOnImageLoad">
         <img src="{{CoverContent.Urls.thumbnail}}" alt="img" onclick="onNavigateToAdventure(event)" onload="onPictureLoaded(this)"/>
     </div>
