--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,39 +1,21 @@
-@font-face {
-	font-family: Koulen;
-	src: url("https://dejai.github.io/scripts/fonts/koulen/Koulen-Regular.ttf");
-}
-@font-face {
-	font-family: Inter-Regular;
-	src: url("https://dejai.github.io/scripts/fonts/inter/static/Inter-Regular.ttf");
-}
-
 /********* Headers/Titles/Icons ***********************/
-/* General */
-/* body.theme_black_bg { background-color:black; color:#f8f8ff; } */
-body.pageBackground { margin:0% !important; color:#D4D1CD !important; background-color:#0f0f0f !important; }
-
 .pageMessage { font-size: 16px; }
 .iconSize { font-size: 20px; }
 .iconSizeSmaller { font-size: 14px; }
 .loginAction { color: blue; }
 .loginAction:active { color:blue; }
 .loginAction:visited { color: blue; }
-
 .shareLinkSection { position:absolute; width:30%; text-align:right; font-size:90%; padding-right:1%; }
 .loadingGif { width: 25%; height:25%; }
-
-/* TO BE MOVED TO GENERIC */
-.dtk-fade { opacity:0; }
-.dtk-fade-in { opacity:100 !important; transition: opacity ease-in 0.5s; }
-.dtk-fade-out { opacity:0 !important; transition: opacity ease-out 0.2s; }
+#loginRequiredButton { border-radius: 20px; padding:1%; border:none;}
 
 /* Heading */
 .mainHeading { margin:0px; margin-top:2%; width:90%; text-align:left; }
 #adventureTitle { font-size: 1.17em; }
 
 /* Menu & Items */
-#menuSection { margin-bottom:5%; background-color: #D4D1CD; color: #0f0f0f;  }
-#menuItems { position: relative; height:48px; }
+#menuSection { margin-bottom:5%; }
+#menuItems { position: relative; height:50px; }
 .menuItem { position:absolute; height:100%; width:100%; }
 .menuItemLeft { left:0; text-align: left; }
 .menuItemRight { right:0; text-align:right; }
@@ -42,10 +24,10 @@ body.pageBackground { margin:0% !important; color:#D4D1CD !important; background
 #closeMenuIcon { color:red !important; margin-right:2%; }
 
 /* Dropdown navigation */
-#dropdownNav { position:absolute; opacity:0; height:0; top:44px; left:0; right:0; width: 100%; overflow-y:hidden; z-index: 100; background-color: #D4D1CD; color: #0f0f0f; transition: ease 0.4s; }
-#dropdownNav.open { display:table; opacity:100; width:100%; padding:0%; text-align:center; right:0; }
-#dropdownNav .navRow { display:inline-block; padding:0%; width:100%; opacity:0; }
-#dropdownNav.open .navRow { width:100%; opacity:100; transition: opacity ease 0.1s; margin:2% 0%; }
+#dropdownNav { position:absolute; opacity:0; height:0; top:44px; left:0; right:0; width: 100%; overflow-y:hidden; z-index: 100; background-color: #D4D1CD; color: #0f0f0f; }
+#dropdownNav.open { display:table; opacity:100; width:100%; padding:0%; text-align:center; right:0; top: 50px; }
+#dropdownNav .navRow { display:inline-block; margin:2% 0%; padding:3% 0%; width:100%; opacity:0; }
+#dropdownNav.open .navRow { opacity:100; transition: opacity ease 0.7s;  }
 #dropdownNav .userName { display:inline-block; }
 /* #dropdownNav .navItem:hover { background-color: #0f0f0f; color:#D4D1CD; } */
 
@@ -89,6 +71,7 @@ body.pageBackground { margin:0% !important; color:#D4D1CD !important; background
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
+	#menuItems { height: 40px; }
 	#menuSection { margin-bottom:1%; }
 	#adventureTitle { font-size: 1.5em; }
 	#searchBarSection { top:5%; }
@@ -96,9 +79,9 @@ body.pageBackground { margin:0% !important; color:#D4D1CD !important; background
 	.mainHeading { margin-top:0.3%; text-align: center; width:100%; }
 
 	#dropdownNav { left:initial; width:150px; right:2%; }
-	#dropdownNav.open { width:150px; right:2%; }
+	#dropdownNav.open { width:150px; right:2%; top:40px; }
 	/* #dropdownNav .navRow { display:inline-block; padding:0%; width:100%; opacity:0; } */
-	#dropdownNav.open .navRow { margin:5% 0%; }
+	#dropdownNav.open .navRow { padding:5% 0%; }
 
 	#adventuresPanel.navOpen { display:flex !important; }
 	#mainTitle.fadeOnSearch { opacity:100 !important; }
