--- a/src/templates/events/form.html
+++ b/src/templates/events/form.html
@@ -1,6 +1,6 @@
 <div class="eventForm centered eventFormFade" data-form-id="{{CardID}}">
         
-    <h1 class="formTitle">{{Name}}</h1>
+    <h1 class="formTitle dtk-theme-cauldron-text2">{{Name}}</h1>
     <p class="formDescription">{{Description}}</p>
 
     <div class="eventDetailsTable ShowChecklists-{{ShowChecklists}}">
