--- a/src/templates/events/noContent.html
+++ b/src/templates/events/noContent.html
@@ -1,6 +1,5 @@
 <div class="centered" style="margin-top:5%;">
-    <h2>{{Title}}</h2>
-    <div class="IsLoggedIn-{{IsLoggedIn}}">
-        <p>Please <a class="loginAction" href="/auth/?action=1" target="_top">login</a> to view the content.</p> 
-    </div>
+    <button id="loginRequiredButton" class="pointer dtk-theme-cauldron-inverse dtk-theme-cauldron-text1" href="/auth/?action=1" onclick="MyUrls.navigateTo(this.getAttribute('href'))">
+        LOG IN
+    </button>
 </div>
