--- a/src/css/main.css
+++ b/src/css/main.css
@@ -6,7 +6,6 @@
 .loginAction:active { color:blue; }
 .loginAction:visited { color: blue; }
 .shareLinkSection { position:absolute; width:30%; text-align:right; font-size:90%; padding-right:1%; }
-.loadingGif { width: 25%; height:25%; }
 #loginRequiredButton { border-radius: 20px; padding:1%; border:none;}
 .versionText { font-size:smaller; font-style: italic;}
 
@@ -55,10 +54,10 @@
 .adventureBlock { height:200px; min-width:90%; max-width:90%; cursor:pointer; overflow:hidden; position:relative; border-radius: 25px; transition: width 0.5s ease, height 0.5s ease, transform 0.5s ease; }
 .adventureBlock .nameSection { text-align:center; margin:0%; position: absolute; width: 100%;  z-index: 50; background-color: #D4D1CD;  padding: 1%; bottom: 0; }
 .adventureBlock:hover { transform: scale(1.02);}
-.adventureBlock .loadingGif { display:block; margin:auto; text-align:center; width:35px;height:35px; }
+.adventureBlock .loadingSpinner { display:block; margin:auto; text-align:center; width:35px;height:35px; }
 .adventureBlock .showOnImageLoad { opacity: 0%; transition: opacity 2s ease; }
 .adventureBlock.visible .showOnImageLoad { opacity: 100%; }
-.adventureBlock.visible .loadingGif { display:none; }
+.adventureBlock.visible .loadingSpinner { display:none; }
 .adventureBlockImageSection { height:100%; }
 .adventureBlock img { width:100%; height:100%; }
 .adventureBlockLink { color: #1F51FF !important; font-size: 16px !important }
@@ -96,7 +95,6 @@
 
 	#mainTitle { text-align:center; }
 	.adventureBlock{ min-width:10%;}
-	.loadingGif { width: 5%; height:5%; }
 }
 
 /* Large devices (laptops/desktops ) */
