--- a/src/css/main.css
+++ b/src/css/main.css
@@ -83,8 +83,9 @@
 
 	#dropdownNav { left:initial; width:150px; right:2%; }
 	#dropdownNav.open { width:150px; right:1.5%; top:40px; border-top:2px solid #0f0f0f;  }
-	#dropdownNav .navRow { text-align:left; }
-	#dropdownNav.open .navRow { padding:5% 0%; padding-left:2%; }
+	/* #dropdownNav .navRow { text-align:left; } */
+	#dropdownNav.open .navRow { padding:5% 0%; }
+	#dropdownNav.open .navRow-lefted { text-align:left; padding-left:2%; }
 
 	#adventuresPanel.navOpen { display:flex !important; }
 	#mainTitle.fadeOnSearch { opacity:100 !important; }
