--- a/src/css/main.css
+++ b/src/css/main.css
@@ -49,7 +49,7 @@
 .menuSeparator { clear:both; }
 
 /*** Adventures List */
-#adventuresPanel { width:95%; margin:auto; overflow-y:scroll; display:flex; flex-wrap: wrap; flex-direction: row; justify-content: center; gap:10px; align-items:center; align-content:center;  }
+#adventuresPanel { width:95%; margin:auto; display:flex; flex-wrap: wrap; flex-direction: row; justify-content: center; gap:10px; align-items:center; align-content:center;  }
 #adventuresPanel.navOpen { display:none !important; }
 .adventureBlock { height:200px; min-width:90%; max-width:90%; cursor:pointer; overflow:hidden; position:relative; border-radius: 25px; transition: width 0.5s ease, height 0.5s ease, transform 0.5s ease; }
 .adventureBlock .nameSection { text-align:center; margin:0%; position: absolute; width: 100%;  z-index: 50; background-color: #D4D1CD;  padding: 1%; bottom: 0; }
