Adjust event form experience

--- a/src/templates/events/form.html
+++ b/src/templates/events/form.html
@@ -22,7 +22,7 @@
     </div>
 
     <div class="eventDetailsTable formCommentBox ShowComments-{{ShowComments}}">
-        <textarea class="commentBox" name="comments" rows="5" placeholder="Enter any comments or questions here ..."></textarea>
+        <textarea class="commentBox" name="comments" rows="5" style="font-size:120%;" placeholder="Enter any comments or questions here ..."></textarea>
     </div>
 
     <div class="formButtons">
